--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -1,191 +1,66 @@
 {
   "Index": {
-    "meta_title": "SaaS Template - The perfect SaaS template to build and scale your business with ease.",
-    "meta_description": "A free and open-source landing page template for your SaaS business, built with React, TypeScript, Shadcn UI, and Tailwind CSS."
-  },
-  "Navbar": {
-    "sign_in": "Sign In",
-    "sign_up": "Registrera dig",
-    "product": "Produkt",
-    "docs": "Dokument",
-    "blog": "Blogg",
-    "community": "Community",
-    "company": "Företag"
-  },
-  "Hero": {
-    "follow_twitter": "Follow @Ixartz on Twitter",
-    "title": "The perfect <important>SaaS template</important> to build and scale your business with ease.",
-    "description": "A free and open-source landing page template for your SaaS business, built with React, TypeScript, Shadcn UI, and Tailwind CSS.",
-    "primary_button": "Kom igång",
-    "secondary_button": "Star on GitHub"
-  },
-  "Sponsors": {
-    "title": "Sponsored by"
-  },
-  "Features": {
-    "section_subtitle": "Features",
-    "section_title": "Unlock the Full Potential of the SaaS Template",
-    "section_description": "A free and open-source landing page template for your SaaS business, built with React, TypeScript, Shadcn UI, and Tailwind CSS.",
-    "feature1_title": "Node.js",
-    "feature2_title": "React",
-    "feature3_title": "Tailwind CSS",
-    "feature4_title": "TypeScript",
-    "feature5_title": "Shadcn UI",
-    "feature6_title": "ESLint",
-    "feature_description": "A free and open-source landing page template for your SaaS business, built with React, TypeScript, Shadcn UI, and Tailwind CSS."
-  },
-  "Pricing": {
-    "section_subtitle": "Features",
-    "section_title": "Unlock the Full Potential of the SaaS Template",
-    "section_description": "A free and open-source landing page template for your SaaS business, built with React, TypeScript, Shadcn UI, and Tailwind CSS.",
-    "button_text": "Get Started"
-  },
-  "PricingPlan": {
-    "free_plan_name": "Free",
-    "premium_plan_name": "Premium",
-    "enterprise_plan_name": "Enterprise",
-    "free_plan_description": "For individuals",
-    "premium_plan_description": "For small teams",
-    "enterprise_plan_description": "For industry leaders",
-    "feature_team_member": "{number} Team Members",
-    "feature_website": "{number} Webbplatser",
-    "feature_storage": "{number} GB Storage",
-    "feature_transfer": "{number} TB Transfer",
-    "feature_email_support": "Email Support",
-    "plan_interval_month": "månad",
-    "plan_interval_year": "år",
-    "next_renew_date": "Din prenumeration förnyas på {date}"
-  },
-  "FAQ": {
-    "question": "Lorem ipsum dolor sit amet, consectetur adipiscing elit?",
-    "answer": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam aliquam enim dui, id consequat turpis ullamcorper ac. Mauris id quam dolor. Nullam eu egestas turpis. Proin risus elit, sollicitudin in mi a, accumsan euismod turpis. In euismod mi sed diam tristique hendrerit."
-  },
-  "CTA": {
-    "title": "Är du redo?",
-    "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
-    "button_text": "Star on GitHub"
-  },
-  "Footer": {
-    "product": "Produkt",
-    "docs": "Dokument",
-    "blog": "Blog",
-    "community": "Community",
-    "company": "Company",
-    "terms_of_service": "Terms Of Service",
-    "privacy_policy": "Privacy Policy",
-    "designed_by": "Designed by <author></author>."
-  },
-  "ProtectFallback": {
-    "not_enough_permission": "You do not have the permissions to perform this action"
+    "meta_title": "Caire - Framtidens Hemtjänstplanering",
+    "meta_description": "Optimera din hemtjänstverksamhet med AI-driven schemaläggning och ruttplanering",
+    "hero_title": "Caire - Framtidens Hemtjänstplanering",
+    "hero_description": "Optimera din hemtjänstverksamhet med AI-driven schemaläggning och ruttplanering",
+    "get_started": "Kom igång",
+    "sign_in": "Logga in",
+    "benefits_title": "Fördelar med Caire",
+    "feature_1_title": "AI-Driven Planering",
+    "feature_1_description": "Optimera scheman automatiskt med vår avancerade AI-algoritm",
+    "feature_2_title": "Effektiv Ruttplanering",
+    "feature_2_description": "Minimera restid och maximera tid hos brukare",
+    "feature_3_title": "Realtidsövervakning",
+    "feature_3_description": "Följ upp och anpassa scheman i realtid"
   },
   "SignIn": {
-    "meta_title": "Sign in",
-    "meta_description": "Seamlessly sign in to your account with our user-friendly login process."
+    "meta_title": "Logga in | Caire",
+    "meta_description": "Logga in på ditt Caire-konto"
   },
   "SignUp": {
-    "meta_title": "Sign up",
-    "meta_description": "Effortlessly create an account through our intuitive sign-up process."
+    "meta_title": "Skapa konto | Caire",
+    "meta_description": "Skapa ett nytt Caire-konto"
+  },
+  "Footer": {
+    "company": "Företag",
+    "contact": "Kontakt",
+    "about": "Om oss",
+    "privacy_policy": "Integritetspolicy",
+    "terms_of_service": "Användarvillkor"
+  },
+  "Navbar": {
+    "sign_in": "Logga in",
+    "sign_up": "Registrera dig"
   },
   "DashboardLayout": {
-    "home": "Home",
-    "todos": "Todos",
+    "home": "Hem",
     "members": "Medlemmar",
-    "billing": "Fakturering",
     "settings": "Inställningar"
   },
-  "Dashboard": {
-    "title_bar": "Översikt",
-    "title_bar_description": "Välkommen till din kontrollpanel",
-    "meta_title": "Kontrollpanel",
-    "meta_description": "Hantera din organisation och schemaläggning"
-  },
   "DashboardOverview": {
+    "welcome": "Välkommen till din kontrollpanel",
     "active_employees": "Aktiva Anställda",
     "active_clients": "Aktiva Klienter",
-    "weekly_schedule": "Veckans Schema",
+    "schedule_completion": "Schemaläggning",
     "travel_time": "Restid",
     "since_last_month": "sedan förra månaden",
     "completion_rate": "slutföringsgrad",
     "average_per_visit": "genomsnitt per besök"
   },
   "QuickActions": {
-    "title": "Snabbåtgärder",
+    "quick_actions": "Snabbåtgärder",
     "view_schedule": "Visa Schema",
     "manage_employees": "Hantera Personal",
     "manage_clients": "Hantera Klienter",
     "settings": "Inställningar"
   },
   "RecentActivity": {
-    "title": "Senaste Aktivitet",
+    "recent_activity": "Senaste Aktivitet",
+    "latest_updates": "Senaste uppdateringar",
     "schedule_optimized": "Schema optimerat",
     "employee_added": "Personal tillagd",
     "client_updated": "Klient uppdaterad",
     "constraint_modified": "Begränsning ändrad"
-  },
-  "DashboardIndex": {
-    "title_bar": "Översikt",
-    "title_bar_description": "Welcome to your dashboard",
-    "message_state_title": "Kom igång",
-    "message_state_description": "You can customize this page by editing the file at <code>dashboard/page.tsx</code>",
-    "message_state_button": "Star on GitHub",
-    "message_state_alternative": "Want more features using the same stack? Try <url></url>."
-  },
-  "UserProfile": {
-    "title_bar": "Användarprofil",
-    "title_bar_description": "Visa och hantera din användarprofil"
-  },
-  "OrganizationProfile": {
-    "title_bar": "Hantera organisation",
-    "title_bar_description": "Hantera din organisation"
-  },
-  "Billing": {
-    "title_bar": "Fakturering",
-    "title_bar_description": "Hantera fakturering och prenumeration",
-    "current_section_title": "Nuvarande plan",
-    "current_section_description": "Justera din betalningsplan så att den passar dina behov bäst",
-    "manage_subscription_button": "Hantera prenumeration"
-  },
-  "BillingOptions": {
-    "current_plan": "Nuvarande plan",
-    "upgrade_plan": "Kom igång"
-  },
-  "CheckoutConfirmation": {
-    "title_bar": "Bekräftelse av betalning",
-    "message_state_title": "Betalning slutförd",
-    "message_state_description": "Din betalning har behandlats. Tack för ditt köp!",
-    "message_state_button": "Gå tillbaka till fakturering"
-  },
-  "DataTable": {
-    "no_results": "Inga resultat."
-  },
-  "Todos": {
-    "title_bar": "Todo List",
-    "title_bar_description": "View and manage your todo list",
-    "add_todo_button": "New todo"
-  },
-  "TodoTableColumns": {
-    "open_menu": "Öppna meny",
-    "edit": "Redigera",
-    "delete": "Radera",
-    "title_header": "Titel",
-    "message_header": "Meddelande",
-    "created_at_header": "Skapad den"
-  },
-  "AddTodo": {
-    "title_bar": "Lägg till Todo",
-    "add_todo_section_title": "Skapa ett nytt att göra",
-    "add_todo_section_description": "Fyll i formuläret nedan för att skapa ett nytt att göra"
-  },
-  "EditTodo": {
-    "title_bar": "Redigera todo",
-    "edit_todo_section_title": "Modifiera todo",
-    "edit_todo_section_description": "Fyll i formuläret nedan för att skapa ett nytt att göra"
-  },
-  "TodoForm": {
-    "title_label": "Titel",
-    "title_description": "Enter a descriptive title for your todo.",
-    "message_title": "Meddelande",
-    "message_description": "Ange ett detaljerat meddelande för ditt.",
-    "submit_button": "Skicka"
   }
 }
